tests/compile/userdata_getter_and_setter.stderr
error: at most one of `getter`, `setter`, `field` can be specified
  --> tests/compile/userdata_getter_and_setter.rs:10:5
   |
10 |     fn x(&self) -> mlua::Result<u32> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
